# elephant-pod

./: .dockerignore  .env.example  .gitignore  Agents.md  CODEOWNERS  LICENSE.md  README.md  package-lock.json  package.json
apps/ios/: README.md  (+1 more)
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  AUDIO_ENGINE.md  BRANDING.md  FEATURE_MATRIX.md  ICLOUD_SYNC_MIGRATION.md  MOBILE_TAURI_NOTES.md  ROADMAP.md  SERVER_SYNC.md  V2_PASS_NOTES.md  VALIDATION.md
infra/: Caddyfile  docker-compose.yml
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mobile/: README.md
src-tauri/mobile/android/: AndroidManifest.media-session-snippet.xml  README.md
src-tauri/mobile/android/app/src/main/java/com/elephanthand/elephantears/audio/: ElephantEarsAudioPlugin.kt  ElephantEarsPlaybackService.kt
src-tauri/mobile/android/app/src/main/java/com/elephanthand/elephantpod/audio/: ElephantPodAudioPlugin.kt  ElephantPodPlaybackService.kt
src-tauri/mobile/ios/: ElephantEarsAudioPlugin.swift  ElephantPodAudioPlugin.swift  Info.plist.background-audio.example  README.md
src-tauri/plugins/tauri-plugin-elephant-audio/: Cargo.toml  README.md  build.rs  package.json
src-tauri/plugins/tauri-plugin-elephant-audio/android/: build.gradle.kts
src-tauri/plugins/tauri-plugin-elephant-audio/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-elephant-audio/android/src/main/java/com/elephanthand/elephantears/audio/: ElephantAudioPlugin.kt  ElephantPlaybackService.kt
src-tauri/plugins/tauri-plugin-elephant-audio/android/src/main/java/com/elephanthand/elephantpod/audio/: ElephantAudioPlugin.kt  ElephantPlaybackService.kt
src-tauri/plugins/tauri-plugin-elephant-audio/guest-js/: index.ts  tsconfig.json
src-tauri/plugins/tauri-plugin-elephant-audio/ios/: Package.swift
src-tauri/plugins/tauri-plugin-elephant-audio/ios/Sources/ElephantAudioPlugin/: ElephantAudioPlugin.swift
src-tauri/plugins/tauri-plugin-elephant-audio/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-elephant-audio/permissions/autogenerated/commands/: now_playing.toml
src-tauri/plugins/tauri-plugin-elephant-audio/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-elephant-audio/src/: lib.rs  models.rs
src-tauri/src/: downloads.rs  lib.rs  main.rs  native_audio.rs
(+186 files in other folders)
