[package]
name = "tauri-plugin-elephant-audio"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "tauri-plugin-elephant-audio"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
